(Small change in our project)

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
 <title> Hello Coursera</title>
 </head>
 <body>
-<h1> This is coursera </h1>
+<h1> This is coursera,I'm doing it first time </h1>
 </body>
 </html>
